# carparkapi

./: .coverage  .gitignore  Dockerfile  README.MD  openapi.json  pyproject.toml  setup.sh
.github/workflows/: main.yml
app/: api.py  dependencies.py
app/models/: nsw_schema.py  schema.py
app/services/: geo.py  nsw_service.py
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_5f5a17c013354698___init___py.html  z_5f5a17c013354698_api_py.html  z_5f5a17c013354698_dependencies_py.html  z_6c0e4b930745278b___init___py.html  z_6c0e4b930745278b_nsw_schema_py.html  z_6c0e4b930745278b_schema_py.html  z_c318f3fa19a49f69_geo_py.html  z_c318f3fa19a49f69_nsw_service_py.html
test/: fixtures.py  test_api.py  test_services.py
