[project]
name = "carpark-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cachetools>=6.0.0",
    "fastapi>=0.115.12",
    "geopy>=2.4.1",
    "pydantic>=2.11.5",
    "python-dotenv>=1.1.0",
    "requests>=2.32.3",
    "slowapi>=0.1.9",
    "uvicorn>=0.34.3",
]

[dependency-groups]
dev = [
    "pytest-cov>=6.1.1",
    "pytest>=8.4.0",
    "requests-mock>=1.12.1",
    "httpx>=0.28.1",
    "uvicorn>=0.34.3",
    "pytest-mock>=3.14.1",
]
